changes on API docs
